fix: regenerate doc and method
